--- a/src/Dyoub.Test/Dyoub.Test.csproj
+++ b/src/Dyoub.Test/Dyoub.Test.csproj
@@ -151,15 +151,19 @@
     <Compile Include="Contexts\Commercial\SaleItems\UpdateSaleItemsContext.cs" />
     <Compile Include="Contexts\Financial\CashFlow\DailyCashFlowContext.cs" />
     <Compile Include="Contexts\Financial\CashFlow\MonthlyCashFlowContext.cs" />
-    <Compile Include="Contexts\Financial\SaleOrderBilling\ConfirmConfirmedSaleOrderContext.cs" />
-    <Compile Include="Contexts\Financial\SaleOrderBilling\ConfirmSaleOrderContext.cs" />
+    <Compile Include="Contexts\OrderProcessing\PurchaseOrderProcessing\ConfirmConfirmedPurchaseOrderContext.cs" />
+    <Compile Include="Contexts\OrderProcessing\PurchaseOrderProcessing\ConfirmPurchaseOrderContext.cs" />
+    <Compile Include="Contexts\OrderProcessing\PurchaseOrderProcessing\RevertNotConfirmedPurchaseOrderContext.cs" />
+    <Compile Include="Contexts\OrderProcessing\PurchaseOrderProcessing\RevertSPurchaseOrderContext.cs" />
+    <Compile Include="Contexts\OrderProcessing\SaleOrderProcessing\ConfirmConfirmedSaleOrderContext.cs" />
+    <Compile Include="Contexts\OrderProcessing\SaleOrderProcessing\ConfirmSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SaleOrders\CreateSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SaleOrders\DeleteConfirmedSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SaleOrders\DeleteSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SaleOrders\FindSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SaleOrders\ListSaleOrderContext.cs" />
-    <Compile Include="Contexts\Financial\SaleOrderBilling\RevertNotConfirmedSaleOrderContext.cs" />
-    <Compile Include="Contexts\Financial\SaleOrderBilling\RevertSaleOrderContext.cs" />
+    <Compile Include="Contexts\OrderProcessing\SaleOrderProcessing\RevertNotConfirmedSaleOrderContext.cs" />
+    <Compile Include="Contexts\OrderProcessing\SaleOrderProcessing\RevertSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SaleOrders\UpdateConfirmedSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SaleOrders\UpdateSaleOrderContext.cs" />
     <Compile Include="Contexts\Commercial\SalePayments\ListSalePaymentsContext.cs" />
@@ -230,7 +234,8 @@
     <Compile Include="Controllers\Financial\CashFlowControllerTest.cs" />
     <Compile Include="Controllers\Financial\FixedExpensesControllerTest.cs" />
     <Compile Include="Controllers\Financial\OtherCashActivitiesControllerTest.cs" />
-    <Compile Include="Controllers\Financial\SaleOrderBillingControllerTest.cs" />
+    <Compile Include="Controllers\OrderProcessing\PurchaseOrderProcessingControllerTest.cs" />
+    <Compile Include="Controllers\OrderProcessing\SaleOrderProcessingControllerTest.cs" />
     <Compile Include="Controllers\Financial\WalletsControllerTest.cs" />
     <Compile Include="Controllers\Inventory\PurchasedProductsControllerTest.cs" />
     <Compile Include="Controllers\Inventory\PurchaseOrdersControllerTest.cs" />
@@ -254,6 +259,7 @@
     <Compile Include="Factories\Financial\OtherCashActivityFactory.cs" />
     <Compile Include="Factories\Financial\SaleIncomeFactory.cs" />
     <Compile Include="Factories\Financial\WalletFactory.cs" />
+    <Compile Include="Factories\Inventory\ProductStockMovementFactory.cs" />
     <Compile Include="Factories\Inventory\PurchasedProductFactory.cs" />
     <Compile Include="Factories\Inventory\PurchaseOrderFactory.cs" />
     <Compile Include="Factories\Inventory\PurchasePaymentFactory.cs" />
