--- a/src/Dyoub.App/Dyoub.App.csproj
+++ b/src/Dyoub.App/Dyoub.App.csproj
@@ -189,6 +189,9 @@
     <EmbeddedResource Include="Data\Migrations\201705131231355_CreateProductStockMovement.resx">
       <DependentUpon>201705131231355_CreateProductStockMovement.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Data\Migrations\201705151648042_CreatePurchaseExpense.resx">
+      <DependentUpon>201705151648042_CreatePurchaseExpense.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Infrastructure\Mail\LocalMail.html" />
     <EmbeddedResource Include="Infrastructure\Logging\LocalLog.html" />
     <Content Include="Scripts\controllers\account\dashboard\account-overview.controller.js" />
@@ -414,6 +417,10 @@
     <Compile Include="Data\Migrations\201705131231355_CreateProductStockMovement.Designer.cs">
       <DependentUpon>201705131231355_CreateProductStockMovement.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\Migrations\201705151648042_CreatePurchaseExpense.cs" />
+    <Compile Include="Data\Migrations\201705151648042_CreatePurchaseExpense.Designer.cs">
+      <DependentUpon>201705151648042_CreatePurchaseExpense.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Extensions\EnumarableExtensions.cs" />
     <Compile Include="Extensions\HttpContextBaseExtension.cs" />
@@ -484,6 +491,9 @@
     <Compile Include="Models\EntityModel\Financial\FixedExpenses\FixedExpense.cs" />
     <Compile Include="Models\EntityModel\Financial\FixedExpenses\FixedExpenseMapping.cs" />
     <Compile Include="Models\EntityModel\Financial\FixedExpenses\FixedExpenseQuery.cs" />
+    <Compile Include="Models\EntityModel\Financial\PurchaseExpenses\PurchaseExpense.cs" />
+    <Compile Include="Models\EntityModel\Financial\PurchaseExpenses\PurchaseExpenseMapping.cs" />
+    <Compile Include="Models\EntityModel\Financial\PurchaseExpenses\PurchaseExpenseQuery.cs" />
     <Compile Include="Models\EntityModel\Financial\SaleIncomes\SaleIncome.cs" />
     <Compile Include="Models\EntityModel\Financial\SaleIncomes\SaleIncomeMapping.cs" />
     <Compile Include="Models\EntityModel\Financial\SaleIncomes\SaleIncomeQuery.cs" />
