--- a/src/Dyoub.App/Dyoub.App.csproj
+++ b/src/Dyoub.App/Dyoub.App.csproj
@@ -428,8 +428,9 @@
       <DependentUpon>201705151648042_CreatePurchaseExpense.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensions\ControllerExtensions.cs" />
+    <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\EnumarableExtensions.cs" />
-    <Compile Include="Extensions\HttpContextBaseExtension.cs" />
+    <Compile Include="Extensions\HttpContextBaseExtensions.cs" />
     <Compile Include="Extensions\HttpRequestBaseExtensions.cs" />
     <Compile Include="Extensions\HttpResponseBaseExtensions.cs" />
     <Compile Include="Extensions\QueryableExtensions.cs" />
