--- a/src/Dyoub.App/Dyoub.App.csproj
+++ b/src/Dyoub.App/Dyoub.App.csproj
@@ -192,6 +192,9 @@
     <EmbeddedResource Include="Data\Migrations\201705151648042_CreatePurchaseExpense.resx">
       <DependentUpon>201705151648042_CreatePurchaseExpense.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Data\Migrations\201705171715319_CreateRentContract.resx">
+      <DependentUpon>201705171715319_CreateRentContract.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Infrastructure\Mail\LocalMail.html" />
     <EmbeddedResource Include="Infrastructure\Logging\LocalLog.html" />
     <Content Include="Scripts\controllers\account\dashboard\account-overview.controller.js" />
@@ -217,6 +220,9 @@
     <Content Include="Scripts\controllers\commercial\payment-methods\payment-method-detail.controller.js" />
     <Content Include="Scripts\controllers\commercial\payment-methods\payment-method-edit.controller.js" />
     <Content Include="Scripts\controllers\commercial\payment-methods\payment-method-list.controller.js" />
+    <Content Include="Scripts\controllers\commercial\rent-contracts\rent-contract-details.controller.js" />
+    <Content Include="Scripts\controllers\commercial\rent-contracts\rent-contract-edit.controller.js" />
+    <Content Include="Scripts\controllers\commercial\rent-contracts\rent-contract-list.controller.js" />
     <Content Include="Scripts\controllers\commercial\sale-customer\sale-customer-details.controller.js" />
     <Content Include="Scripts\controllers\commercial\sale-customer\sale-customer-edit.controller.js" />
     <Content Include="Scripts\controllers\commercial\sale-items\sale-items-details.controller.js" />
@@ -270,6 +276,7 @@
     <Content Include="Scripts\services\commercial\installment.service.js" />
     <Content Include="Scripts\services\commercial\payment-method-fee.service.js" />
     <Content Include="Scripts\services\commercial\payment-method.service.js" />
+    <Content Include="Scripts\services\commercial\rent-contract.service.js" />
     <Content Include="Scripts\services\commercial\sale-customer.service.js" />
     <Content Include="Scripts\services\commercial\sale-items.service.js" />
     <Content Include="Scripts\services\commercial\sale-order.service.js" />
@@ -302,6 +309,7 @@
     <Compile Include="Controllers\Catalog\ProductsController.cs" />
     <Compile Include="Controllers\Catalog\ServicesController.cs" />
     <Compile Include="Controllers\Commercial\PaymentMethodsController.cs" />
+    <Compile Include="Controllers\Commercial\RentContractsController.cs" />
     <Compile Include="Controllers\Commercial\SaleCustomerController.cs" />
     <Compile Include="Controllers\Commercial\SaleItemsController.cs" />
     <Compile Include="Controllers\Commercial\SaleOrdersController.cs" />
@@ -427,6 +435,10 @@
     <Compile Include="Data\Migrations\201705151648042_CreatePurchaseExpense.Designer.cs">
       <DependentUpon>201705151648042_CreatePurchaseExpense.cs</DependentUpon>
     </Compile>
+    <Compile Include="Data\Migrations\201705171715319_CreateRentContract.cs" />
+    <Compile Include="Data\Migrations\201705171715319_CreateRentContract.Designer.cs">
+      <DependentUpon>201705171715319_CreateRentContract.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\EnumarableExtensions.cs" />
@@ -480,6 +492,9 @@
     <Compile Include="Models\EntityModel\Commercial\PaymentMethods\PaymentMethod.cs" />
     <Compile Include="Models\EntityModel\Commercial\PaymentMethods\PaymentMethodMapping.cs" />
     <Compile Include="Models\EntityModel\Commercial\PaymentMethods\PaymentMethodQuery.cs" />
+    <Compile Include="Models\EntityModel\Commercial\RentContracts\RentContract.cs" />
+    <Compile Include="Models\EntityModel\Commercial\RentContracts\RentContractMapping.cs" />
+    <Compile Include="Models\EntityModel\Commercial\RentContracts\RentContractQuery.cs" />
     <Compile Include="Models\EntityModel\Commercial\SaleItems\SaleItem.cs" />
     <Compile Include="Models\EntityModel\Commercial\SaleOrders\SaleOrder.cs" />
     <Compile Include="Models\EntityModel\Commercial\SaleOrders\SaleOrderMapping.cs" />
@@ -600,6 +615,10 @@
     <Compile Include="Models\ViewModel\Commercial\PaymentMethods\PaymentMethodFeeViewModel.cs" />
     <Compile Include="Models\ViewModel\Commercial\PaymentMethods\PaymentMethodIdViewModel.cs" />
     <Compile Include="Models\ViewModel\Commercial\PaymentMethods\UpdatePaymentMethodViewModel.cs" />
+    <Compile Include="Models\ViewModel\Commercial\RentContracts\CreateRentContractViewModel.cs" />
+    <Compile Include="Models\ViewModel\Commercial\RentContracts\ListRentContractViewModel.cs" />
+    <Compile Include="Models\ViewModel\Commercial\RentContracts\RentContractIdViewModel.cs" />
+    <Compile Include="Models\ViewModel\Commercial\RentContracts\UpdateRentContractViewModel.cs" />
     <Compile Include="Models\ViewModel\Commercial\SaleCustomer\SaleCustomerViewModel.cs" />
     <Compile Include="Models\ViewModel\Commercial\SaleItems\SaleItemViewModel.cs" />
     <Compile Include="Models\ViewModel\Commercial\SaleItems\UpdateSaleItemListViewModel.cs" />
@@ -665,6 +684,9 @@
     <Compile Include="Results\Catalog\Services\ServiceListJson.cs" />
     <Compile Include="Results\Commercial\PaymentMethods\PaymentMethodJson.cs" />
     <Compile Include="Results\Commercial\PaymentMethods\PaymentMethodListJson.cs" />
+    <Compile Include="Results\Commercial\RentContracts\RentContractIdJson.cs" />
+    <Compile Include="Results\Commercial\RentContracts\RentContractJson.cs" />
+    <Compile Include="Results\Commercial\RentContracts\RentContractListJson.cs" />
     <Compile Include="Results\Commercial\SaleCustomer\SaleCustomerJson.cs" />
     <Compile Include="Results\Commercial\SaleItems\SaleItemListJson.cs" />
     <Compile Include="Results\Commercial\SaleOrders\SaleOrderIdJson.cs" />
@@ -806,6 +828,10 @@
     <Content Include="Views\Inventory\PurchaseOrders\_RevertPurchaseOrder.cshtml" />
     <Content Include="Views\Inventory\ProductStock\ProductStockList.cshtml" />
     <Content Include="Views\Inventory\ProductStock\ProductStockDetails.cshtml" />
+    <Content Include="Views\Commercial\RentContracts\_RemoveRentContract.cshtml" />
+    <Content Include="Views\Commercial\RentContracts\RentContractDetails.cshtml" />
+    <Content Include="Views\Commercial\RentContracts\RentContractEdit.cshtml" />
+    <Content Include="Views\Commercial\RentContracts\RentContractList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
