--- a/src/Settings.Sample/Dyoub.App.config
+++ b/src/Settings.Sample/Dyoub.App.config
@@ -5,7 +5,7 @@
   -->
 <appSettings>
   <add key="Database:Provider" value="MySql.Data.MySqlClient"/>
-  <add key="Database:ConnectionString" value="Database=app; Data Source=localhost; UserId=root; Password=123456"/>
+  <add key="Database:ConnectionString" value="Database=app; Data Source=localhost; UserId=root; Password=123456; Allow User Variables=True"/>
   <add key="Logger" value="Local"/>
   <add key="Logger:Sentry:DSN" value="SENTRY_DSN"/>
   <add key="Mailer" value="Local"/>
